src/objects/Trifecta_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Response_Message__c</fullName>
        <description>Message to be displayed after the submission of the survey</description>
        <label>Auto Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the survey</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>Inline help text for the purpose of the survey</description>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <description>Contains &quot;I&quot; for Internal Survey, &quot;E&quot; for External Survey</description>
        <label>Survey Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Trifecta Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trifecta Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>